small layout issues: colors for login panel

--- a/seafile_keeper_ext/seahub-data/custom/keeper.css
+++ b/seafile_keeper_ext/seahub-data/custom/keeper.css
@@ -251,14 +251,12 @@ div.op-container a, div#dir-view li.grid-item a.ellipsis.text-link, .commit-list
 #side-nav a#enable-mods:focus {
     color: #ccc !important
 }
-.nav-con-tabs-nav .ui-state-active a, .new-narrow-panel .hd, #notifications .num {
-    /*background: #57a5b8 !important*/
+.nav-con-tabs-nav .ui-state-active a {
+    background: #57a5b8 !important
+}
+.new-narrow-panel .hd, #notifications .num {
     background: #b71a52 !important
 }
-#notifications .num {
-    border-color: #57a5b8;
-}
-
 .side-tabnav-tabs .tab-cur a {
     background-color: #57a5b8 !important;
 }
@@ -284,6 +282,10 @@ div.op-container a, div#dir-view li.grid-item a.ellipsis.text-link, .commit-list
 
 div.fright.js-file-op > a:focus {
     color: white;
+}
+
+#guide-for-new .icon-lightbulb {
+    color: #57a5b8;
 }
 
 /*
